--- a/index.html
+++ b/index.html
@@ -2,16 +2,15 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=no" />
   <title>View in Your Room</title>
   <style>
     html, body {
-      margin: 0; padding: 0;
+      margin: 0;
+      padding: 0;
       overflow: hidden;
       height: 100%;
       background: #000;
-      touch-action: none;
-      user-select: none;
     }
     video {
       position: absolute;
@@ -24,27 +23,27 @@
       position: absolute;
       top: 50%;
       left: 50%;
+      transform: translate(-50%, -50%) scale(1) rotate(0deg);
       width: 200px;
-      transform: translate(-50%, -50%);
       z-index: 1;
-      cursor: grab;
       touch-action: none;
+      cursor: grab;
     }
-    .controls {
-      position: fixed;
+    #controls {
+      position: absolute;
       bottom: 20px;
       left: 50%;
       transform: translateX(-50%);
-      z-index: 10;
       display: flex;
       gap: 10px;
+      z-index: 2;
     }
-    button {
-      padding: 10px 16px;
+    .control-btn {
+      background: rgba(255, 255, 255, 0.9);
       border: none;
-      background: rgba(0,0,0,0.7);
-      color: #fff;
-      border-radius: 6px;
+      padding: 10px 16px;
+      font-size: 14px;
+      border-radius: 8px;
       font-weight: bold;
       cursor: pointer;
     }
@@ -53,126 +52,117 @@
 <body>
   <video id="camera" autoplay muted playsinline></video>
   <img id="overlay-image" src="" alt="Overlay" />
-  
-  <div class="controls">
-    <button id="switch-camera">🔄 Switch Camera</button>
-    <button id="lock-btn">🔒 Lock</button>
-    <button id="reset-btn">🔁 Reset</button>
+  <div id="controls">
+    <button id="lockBtn" class="control-btn">🔒 Lock</button>
+    <button id="resetBtn" class="control-btn">🔄 Reset</button>
+    <button id="switchCameraBtn" class="control-btn">📷 Switch</button>
   </div>
 
   <script>
-    let isDragging = false;
-    let offsetX, offsetY;
-    let currentScale = 1;
-    let isLocked = false;
-    let usingFrontCamera = false;
-    let currentStream = null;
-
-    const overlayImg = document.getElementById('overlay-image');
-    const video = document.getElementById('camera');
-
-    // Load overlay image from URL param
     const params = new URLSearchParams(window.location.search);
-    const imgUrl = params.get('img');
-    if (imgUrl) overlayImg.src = imgUrl;
+    const imgUrl = params.get("img");
+    const overlay = document.getElementById("overlay-image");
+    if (imgUrl) overlay.src = imgUrl;
 
-    // Start camera with given facing mode
-    function startCamera(facingMode = 'environment') {
-      if (currentStream) {
-        currentStream.getTracks().forEach(track => track.stop());
+    // Camera stream
+    let usingFront = false;
+    async function startCamera(facingMode = "environment") {
+      try {
+        const stream = await navigator.mediaDevices.getUserMedia({
+          video: { facingMode },
+          audio: false,
+        });
+        document.getElementById("camera").srcObject = stream;
+      } catch (err) {
+        alert("Camera access denied.");
+        console.error(err);
       }
-      navigator.mediaDevices.getUserMedia({ video: { facingMode } })
-        .then(stream => {
-          video.srcObject = stream;
-          currentStream = stream;
-        })
-        .catch(err => alert('Camera error: ' + err.message));
     }
     startCamera();
 
     // Switch camera
-    document.getElementById('switch-camera').addEventListener('click', () => {
-      usingFrontCamera = !usingFrontCamera;
-      startCamera(usingFrontCamera ? 'user' : 'environment');
-    });
+    document.getElementById("switchCameraBtn").onclick = () => {
+      usingFront = !usingFront;
+      startCamera(usingFront ? "user" : "environment");
+    };
 
-    // Drag logic
-    overlayImg.addEventListener('mousedown', e => {
-      if (isLocked) return;
-      isDragging = true;
-      offsetX = e.clientX - overlayImg.offsetLeft;
-      offsetY = e.clientY - overlayImg.offsetTop;
-      overlayImg.style.cursor = 'grabbing';
-    });
+    // Drag, Zoom, Rotate
+    let isLocked = false;
+    let scale = 1;
+    let rotation = 0;
+    let lastTouchDistance = 0;
+    let lastAngle = 0;
+    let startX, startY;
 
-    document.addEventListener('mousemove', e => {
-      if (isDragging) {
-        overlayImg.style.left = (e.clientX - offsetX) + 'px';
-        overlayImg.style.top = (e.clientY - offsetY) + 'px';
-      }
-    });
-
-    document.addEventListener('mouseup', () => {
-      isDragging = false;
-      overlayImg.style.cursor = 'grab';
-    });
-
-    // Touch move
-    overlayImg.addEventListener('touchstart', e => {
+    overlay.addEventListener("touchstart", (e) => {
       if (isLocked) return;
       if (e.touches.length === 1) {
-        isDragging = true;
-        offsetX = e.touches[0].clientX - overlayImg.offsetLeft;
-        offsetY = e.touches[0].clientY - overlayImg.offsetTop;
+        startX = e.touches[0].clientX - overlay.offsetLeft;
+        startY = e.touches[0].clientY - overlay.offsetTop;
       }
-    });
-
-    overlayImg.addEventListener('touchmove', e => {
-      if (isLocked) return;
-      if (e.touches.length === 1 && isDragging) {
-        overlayImg.style.left = (e.touches[0].clientX - offsetX) + 'px';
-        overlayImg.style.top = (e.touches[0].clientY - offsetY) + 'px';
-      }
-      // Pinch to zoom
       if (e.touches.length === 2) {
-        const dx = e.touches[0].clientX - e.touches[1].clientX;
-        const dy = e.touches[0].clientY - e.touches[1].clientY;
-        const dist = Math.sqrt(dx * dx + dy * dy);
-        if (!overlayImg.startDist) overlayImg.startDist = dist;
-        const scale = dist / overlayImg.startDist;
-        currentScale = Math.min(3, Math.max(0.5, scale));
-        overlayImg.style.transform = `translate(-50%, -50%) scale(${currentScale})`;
+        lastTouchDistance = getDistance(e.touches);
+        lastAngle = getAngle(e.touches);
       }
     });
 
-    overlayImg.addEventListener('touchend', e => {
-      isDragging = false;
-      overlayImg.style.cursor = 'grab';
-      overlayImg.startDist = null;
+    overlay.addEventListener("touchmove", (e) => {
+      e.preventDefault();
+      if (isLocked) return;
+
+      if (e.touches.length === 1) {
+        let x = e.touches[0].clientX - startX;
+        let y = e.touches[0].clientY - startY;
+        overlay.style.left = `${x}px`;
+        overlay.style.top = `${y}px`;
+      }
+
+      if (e.touches.length === 2) {
+        const newDistance = getDistance(e.touches);
+        const newAngle = getAngle(e.touches);
+
+        // Zoom
+        scale *= newDistance / lastTouchDistance;
+        lastTouchDistance = newDistance;
+
+        // Rotate
+        rotation += newAngle - lastAngle;
+        lastAngle = newAngle;
+
+        applyTransform();
+      }
     });
 
-    // Tap to reposition image
-    document.addEventListener('click', (e) => {
-      if (isLocked || e.target.tagName === 'BUTTON') return;
-      overlayImg.style.left = `${e.clientX}px`;
-      overlayImg.style.top = `${e.clientY}px`;
-    });
+    function getDistance(touches) {
+      const dx = touches[0].clientX - touches[1].clientX;
+      const dy = touches[0].clientY - touches[1].clientY;
+      return Math.sqrt(dx * dx + dy * dy);
+    }
 
-    // Lock/Unlock
-    document.getElementById('lock-btn').addEventListener('click', () => {
+    function getAngle(touches) {
+      const dx = touches[1].clientX - touches[0].clientX;
+      const dy = touches[1].clientY - touches[0].clientY;
+      return Math.atan2(dy, dx) * (180 / Math.PI);
+    }
+
+    function applyTransform() {
+      overlay.style.transform = `translate(-50%, -50%) scale(${scale}) rotate(${rotation}deg)`;
+    }
+
+    // Lock/Reset Controls
+    document.getElementById("lockBtn").onclick = () => {
       isLocked = !isLocked;
-      document.getElementById('lock-btn').textContent = isLocked ? '🔓 Unlock' : '🔒 Lock';
-    });
+      document.getElementById("lockBtn").textContent = isLocked ? "🔓 Unlock" : "🔒 Lock";
+      overlay.style.cursor = isLocked ? "default" : "grab";
+    };
 
-    // Reset
-    document.getElementById('reset-btn').addEventListener('click', () => {
-      overlayImg.style.left = '50%';
-      overlayImg.style.top = '50%';
-      currentScale = 1;
-      overlayImg.style.transform = 'translate(-50%, -50%) scale(1)';
-      isLocked = false;
-      document.getElementById('lock-btn').textContent = '🔒 Lock';
-    });
+    document.getElementById("resetBtn").onclick = () => {
+      scale = 1;
+      rotation = 0;
+      overlay.style.left = "50%";
+      overlay.style.top = "50%";
+      applyTransform();
+    };
   </script>
 </body>
 </html>
