--- a/index.html
+++ b/index.html
@@ -37,8 +37,6 @@
       transform: translateX(-50%);
       z-index: 10;
       display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
       gap: 10px;
     }
     button {
@@ -57,13 +55,10 @@
   <img id="overlay-image" src="" alt="Overlay" />
 
   <div class="controls">
-    <button id="switch-camera">🔄 Switch</button>
+    <button id="switch-camera">🔄 Switch Camera</button>
     <button id="lock-btn">🔒 Lock</button>
     <button id="reset-btn">🔁 Reset</button>
-    <button id="capture-btn">📸 Take Picture</button>
   </div>
-
-  <canvas id="capture-canvas" style="display: none;"></canvas>
 
   <script>
     let isDragging = false;
@@ -76,7 +71,6 @@
 
     const overlayImg = document.getElementById('overlay-image');
     const video = document.getElementById('camera');
-    const canvas = document.getElementById('capture-canvas');
 
     const params = new URLSearchParams(window.location.search);
     const imgUrl = params.get('img');
@@ -149,12 +143,13 @@
       if (e.touches.length === 1 && isDragging) {
         overlayImg.style.left = (e.touches[0].clientX - offsetX) + 'px';
         overlayImg.style.top = (e.touches[0].clientY - offsetY) + 'px';
-      } else if (e.touches.length === 2 && initialDist != null) {
+      } else if (e.touches.length === 2) {
         const dx = e.touches[1].clientX - e.touches[0].clientX;
         const dy = e.touches[1].clientY - e.touches[0].clientY;
         const newDist = Math.hypot(dx, dy);
         const newAngle = Math.atan2(dy, dx);
 
+        // Scale and rotate
         const scale = newDist / initialDist;
         currentScale = Math.min(3, Math.max(0.3, initialScale * scale));
         currentRotation = initialRotation + ((newAngle - initialAngle) * 180 / Math.PI);
@@ -190,42 +185,6 @@
       overlayImg.style.transform = 'translate(-50%, -50%) scale(1) rotate(0deg)';
       isLocked = false;
       document.getElementById('lock-btn').textContent = '🔒 Lock';
-    });
-
-    // Take Picture Feature
-    document.getElementById('capture-btn').addEventListener('click', () => {
-      const width = video.videoWidth;
-      const height = video.videoHeight;
-      canvas.width = width;
-      canvas.height = height;
-
-      const ctx = canvas.getContext('2d');
-      ctx.drawImage(video, 0, 0, width, height);
-
-      // Get overlay image properties
-      const rect = overlayImg.getBoundingClientRect();
-      const vidRect = video.getBoundingClientRect();
-
-      const centerX = rect.left + rect.width / 2 - vidRect.left;
-      const centerY = rect.top + rect.height / 2 - vidRect.top;
-
-      ctx.save();
-      ctx.translate(centerX, centerY);
-      ctx.rotate(currentRotation * Math.PI / 180);
-      ctx.scale(currentScale, currentScale);
-
-      const overlay = new Image();
-      overlay.src = overlayImg.src;
-      overlay.onload = () => {
-        ctx.drawImage(overlay, -overlay.width / 2, -overlay.height / 2);
-        ctx.restore();
-
-        // Save image
-        const link = document.createElement('a');
-        link.download = 'view-in-room.png';
-        link.href = canvas.toDataURL('image/png');
-        link.click();
-      };
     });
   </script>
 </body>
