--- a/backup.html
+++ b/backup.html
@@ -48,9 +48,6 @@
       font-weight: bold;
       cursor: pointer;
     }
-    canvas {
-      display: none;
-    }
   </style>
 </head>
 <body>
@@ -59,17 +56,16 @@
 
   <div class="controls">
     <button id="switch-camera">🔄 Switch Camera</button>
+    <button id="lock-btn">🔒 Lock</button>
     <button id="reset-btn">🔁 Reset</button>
-    <button id="screenshot-btn">📸 Screenshot</button>
   </div>
-
-  <canvas id="capture-canvas"></canvas>
 
   <script>
     let isDragging = false;
     let offsetX, offsetY;
     let currentScale = 1;
     let currentRotation = 0;
+    let isLocked = false;
     let usingFrontCamera = false;
     let currentStream = null;
 
@@ -100,6 +96,7 @@
 
     // Mouse Drag
     overlayImg.addEventListener('mousedown', e => {
+      if (isLocked) return;
       isDragging = true;
       offsetX = e.clientX - overlayImg.offsetLeft;
       offsetY = e.clientY - overlayImg.offsetTop;
@@ -125,6 +122,7 @@
     let initialRotation = 0;
 
     overlayImg.addEventListener('touchstart', e => {
+      if (isLocked) return;
       if (e.touches.length === 1) {
         isDragging = true;
         offsetX = e.touches[0].clientX - overlayImg.offsetLeft;
@@ -141,6 +139,7 @@
     });
 
     overlayImg.addEventListener('touchmove', e => {
+      if (isLocked) return;
       if (e.touches.length === 1 && isDragging) {
         overlayImg.style.left = (e.touches[0].clientX - offsetX) + 'px';
         overlayImg.style.top = (e.touches[0].clientY - offsetY) + 'px';
@@ -150,6 +149,7 @@
         const newDist = Math.hypot(dx, dy);
         const newAngle = Math.atan2(dy, dx);
 
+        // Scale and rotate
         const scale = newDist / initialDist;
         currentScale = Math.min(3, Math.max(0.3, initialScale * scale));
         currentRotation = initialRotation + ((newAngle - initialAngle) * 180 / Math.PI);
@@ -165,9 +165,15 @@
 
     // Tap to reposition
     document.addEventListener('click', (e) => {
-      if (e.target.tagName === 'BUTTON') return;
+      if (isLocked || e.target.tagName === 'BUTTON') return;
       overlayImg.style.left = `${e.clientX}px`;
       overlayImg.style.top = `${e.clientY}px`;
+    });
+
+    // Lock Toggle
+    document.getElementById('lock-btn').addEventListener('click', () => {
+      isLocked = !isLocked;
+      document.getElementById('lock-btn').textContent = isLocked ? '🔓 Unlock' : '🔒 Lock';
     });
 
     // Reset
@@ -177,46 +183,8 @@
       currentScale = 1;
       currentRotation = 0;
       overlayImg.style.transform = 'translate(-50%, -50%) scale(1) rotate(0deg)';
-    });
-
-    // Screenshot
-    document.getElementById('screenshot-btn').addEventListener('click', () => {
-      const canvas = document.getElementById('capture-canvas');
-      const context = canvas.getContext('2d');
-
-      canvas.width = video.videoWidth;
-      canvas.height = video.videoHeight;
-
-      context.drawImage(video, 0, 0, canvas.width, canvas.height);
-
-      const img = new Image();
-      img.onload = () => {
-        const overlayRect = overlayImg.getBoundingClientRect();
-        const videoRect = video.getBoundingClientRect();
-
-        const overlayCanvasX = overlayRect.left - videoRect.left;
-        const overlayCanvasY = overlayRect.top - videoRect.top;
-
-        const scaleX = canvas.width / videoRect.width;
-        const scaleY = canvas.height / videoRect.height;
-
-        context.save();
-        context.translate(
-          overlayCanvasX * scaleX + (overlayImg.offsetWidth * scaleX / 2),
-          overlayCanvasY * scaleY + (overlayImg.offsetHeight * scaleY / 2)
-        );
-        context.rotate(currentRotation * Math.PI / 180);
-        context.scale(currentScale, currentScale);
-        context.translate(-overlayImg.offsetWidth / 2, -overlayImg.offsetHeight / 2);
-        context.drawImage(img, 0, 0, overlayImg.offsetWidth, overlayImg.offsetHeight);
-        context.restore();
-
-        const link = document.createElement('a');
-        link.download = 'screenshot.png';
-        link.href = canvas.toDataURL('image/png');
-        link.click();
-      };
-      img.src = overlayImg.src;
+      isLocked = false;
+      document.getElementById('lock-btn').textContent = '🔒 Lock';
     });
   </script>
 </body>
