--- a/index.html
+++ b/index.html
@@ -134,11 +134,13 @@
         const dx = e.touches[1].clientX - e.touches[0].clientX;
         const dy = e.touches[1].clientY - e.touches[0].clientY;
         initialDist = Math.hypot(dx, dy);
-        initialAngle = Math.atan2(dy, dx);
+        // initialAngle = Math.atan2(dy, dx);
         initialScale = currentScale;
-        initialRotation = currentRotation;
+        // initialRotation = currentRotation;
       }
     });
+    
+    
 
     overlayImg.addEventListener('touchmove', e => {
       if (e.touches.length === 1 && isDragging) {
@@ -148,13 +150,13 @@
         const dx = e.touches[1].clientX - e.touches[0].clientX;
         const dy = e.touches[1].clientY - e.touches[0].clientY;
         const newDist = Math.hypot(dx, dy);
-        const newAngle = Math.atan2(dy, dx);
+        // const newAngle = Math.atan2(dy, dx);
 
         const scale = newDist / initialDist;
         currentScale = Math.min(3, Math.max(0.3, initialScale * scale));
-        currentRotation = initialRotation + ((newAngle - initialAngle) * 180 / Math.PI);
+        // currentRotation = initialRotation + ((newAngle - initialAngle) * 180 / Math.PI);
 
-        overlayImg.style.transform = `translate(-50%, -50%) scale(${currentScale}) rotate(${currentRotation}deg)`;
+        // overlayImg.style.transform = `translate(-50%, -50%) scale(${currentScale}) rotate(${currentRotation}deg)`;
       }
     });
 
@@ -175,7 +177,7 @@
       overlayImg.style.left = '50%';
       overlayImg.style.top = '50%';
       currentScale = 1;
-      currentRotation = 0;
+      // currentRotation = 0;
       overlayImg.style.transform = 'translate(-50%, -50%) scale(1) rotate(0deg)';
     });
 
@@ -216,7 +218,7 @@ document.getElementById('screenshot-btn').addEventListener('click', () => {
   tempImg.onload = () => {
     ctx.save();
     ctx.translate(centerX, centerY);
-    ctx.rotate(currentRotation * Math.PI / 180);
+    // ctx.rotate(currentRotation * Math.PI / 180);
     ctx.scale(currentScale, currentScale);
     ctx.drawImage(tempImg, -overlayW / 2, -overlayH / 2, overlayW, overlayH);
     ctx.restore();
